tests/ui/compile-fail/init/colon_instead_of_arrow.stderr
error[E0308]: mismatched types
  --> tests/ui/compile-fail/init/colon_instead_of_arrow.rs:21:31
   |
14 |     fn new() -> impl PinInit<Self> {
   |                 ------------------ the found opaque type
...
21 |         pin_init!(Self { bar: Bar::new() })
   |                          ---  ^^^^^^^^^^ expected `Bar`, found opaque type
   |                          |
   |                          arguments to this function are incorrect
   |
   = note:   expected struct `Bar`
           found opaque type `impl pin_init::PinInit<Bar>`
note: function defined here
  --> $RUST/core/src/ptr/mod.rs
   |
   | pub const unsafe fn write<T>(dst: *mut T, src: T) {
   |                     ^^^^^
